Add spacing and heights to navigationMenu buttons

--- a/a1/css/main.css
+++ b/a1/css/main.css
@@ -29,8 +29,13 @@
   display: inline-block;
 }
 
+.button {
+  padding-top: 25px;
+}
+
 .row button {
   width: 250px;
+  height: 75px;
   display: default;
   background-color: #006699;
   color: white;
