--- a/a1/css/main.css
+++ b/a1/css/main.css
@@ -55,7 +55,7 @@
 
 .thumbnail {
   width: 225px;
-  height: 350px;
+  height: 300px;
 }
 
 .thumbnail img {
@@ -64,9 +64,9 @@
 }
 
 .thumbnail > .caption h3 {
+  text-align: center;
   display: table-cell;
   vertical-align: middle;
-  height: 100px;
   width: 225px;
   font-size: 20px;
 }
