--- a/a1/css/main.css
+++ b/a1/css/main.css
@@ -1,8 +1,7 @@
 #header {
   height: 100px;
   width: 1000px;
-  color: white;
-  background: #006699;
+  background: #bbe7e6;
 }
 
 #logo {
@@ -37,9 +36,13 @@
   width: 250px;
   height: 75px;
   display: default;
-  background-color: #006699;
-  color: white;
+  background-color: #bbe7e6;
   font-size: 125%;
+}
+
+.row button:hover {
+  background-color: #2eaba5;
+  color: red;
 }
 
 #productList {
