--- a/a1/css/main.css
+++ b/a1/css/main.css
@@ -1,18 +1,76 @@
 /* Set site max width to 1000px */
 body {
-	margin-right: auto;
-	margin-left: auto;
-	max-width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1000px;
 }
-
 #welcomeBanner {
-	text-align: center;
+    text-align: center;
 }
-
 #logo {
-	text-align: center;
+    text-align: center;
 }
-
 #product-name {
-	text-align: center;	
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.thumbnail {
+    border: 0 none;
+    box-shadow: none;
+}
+.thumbnail:hover {
+    background-color: #EEEEEE;
+}
+.product img {
+    margin-top: 15px;
+    height: 225px;
+    width: 225px;
+}
+.product-box {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+/* Show overlay. Overwrite .overlay."position" */
+.thumbnail.product:hover .overlay.top {
+    top: 72.5%;
+    left: 21px;
+}
+/* Default behaviour has overlay visible */
+.overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 50px;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    overflow: hidden;
+    text-align: center;
+    width: 84%;
+    -moz-transition: top 0.15s, right 0.15s, bottom 0.15s, left 0.15s;
+    -webkit-transition: top 0.15s, right 0.15s, bottom 0.15s, left 0.15s;
+    transition: top 0.15s, right 0.15s, bottom 0.15s, left 0.15s;
+}
+/* Hide it with this */
+.overlay.top {
+    top: 100%;
+}
+.overlay.top h4 {
+    margin-top: 5px;
+}
+/* Miscellaneous styling for overlay */
+.thumbnail.product {
+    position: relative;
+    float: left;
+    margin: 2%;
+    overflow: hidden;
+    width: 100%;
+    max-width: 540px;
+}
+.thumbnail.product img {
+    max-width: 100%;
+}
+#footer {
+	text-align: center;
 }
