--- a/assignment2/css/products.css
+++ b/assignment2/css/products.css
@@ -89,3 +89,27 @@
     height:50%;
     top:5px;
 }
+
+#add-cart {
+    width: 65px;
+    top: 160px;
+    left: 57.5px;
+    color: #FFF;
+    background-color: #7DD183;
+    border: none;
+    position: absolute;
+    z-index: 100;
+    display: block;
+}
+
+#remove-cart {
+    width: 65px;
+    top: 160px;
+    left: 132.5px;
+    color: #FFF;
+    background-color: #D17D7D;
+    border: none;
+    position: absolute;
+    z-index: 100;
+    display: block;
+}
