--- a/assignment2/css/products.css
+++ b/assignment2/css/products.css
@@ -1,4 +1,4 @@
-#product-name {
+.product-name {
     margin-top: 8px;
     margin-bottom: 5px;
     text-align: center;
@@ -80,7 +80,7 @@
 
 }
 .box:hover .cart-overlay {
-    opacity:0.75;
+    opacity:0.85;
 }
 .cart {
     position:relative;
@@ -90,7 +90,7 @@
     top:5px;
 }
 
-#add-cart {
+.add-cart {
     width: 65px;
     top: 160px;
     left: 57.5px;
@@ -100,9 +100,10 @@
     position: absolute;
     z-index: 100;
     display: block;
+    font-weight: 300;
 }
 
-#remove-cart {
+.remove-cart {
     width: 65px;
     top: 160px;
     left: 132.5px;
@@ -112,4 +113,5 @@
     position: absolute;
     z-index: 100;
     display: block;
+    font-weight: 300;
 }
