--- a/assignment3/css/modal.css
+++ b/assignment3/css/modal.css
@@ -69,6 +69,10 @@
     font-weight: 400;
 }
 
+.add-quantity:hover {
+    background-color: #689E6C;
+}
+
 .remove-quantity {
     width: 20px;
     margin-bottom: 5px;
@@ -79,6 +83,10 @@
     z-index: 100;
     display: inline;
     font-weight: 400;
+}
+
+.remove-quantity:hover {
+    background: #6E3030;
 }
 
 .cart-product-subtotal {
